--- a/index.html
+++ b/index.html
@@ -10,52 +10,50 @@
     <header>
       <h1>Wordle</h1>
     </header>
-    <div class="timer">
-      <span>time : 00:00</span>
-    </div>
+    <div id="timer">00:00</div>
     <main>
       <div class="wordle_wrap">
         <ul class="board-row row-0">
+          <li class="board-block" data-index="00"></li>
           <li class="board-block" data-index="01"></li>
           <li class="board-block" data-index="02"></li>
           <li class="board-block" data-index="03"></li>
           <li class="board-block" data-index="04"></li>
-          <li class="board-block" data-index="05"></li>
         </ul>
         <ul class="board-row row-1">
-          <li class="board-block" data-index="06"></li>
-          <li class="board-block" data-index="07"></li>
-          <li class="board-block" data-index="08"></li>
-          <li class="board-block" data-index="09"></li>
           <li class="board-block" data-index="10"></li>
-        </ul>
-        <ul class="board-row row-2">
           <li class="board-block" data-index="11"></li>
           <li class="board-block" data-index="12"></li>
           <li class="board-block" data-index="13"></li>
           <li class="board-block" data-index="14"></li>
-          <li class="board-block" data-index="15"></li>
         </ul>
-        <ul class="board-row row-3">
-          <li class="board-block" data-index="16"></li>
-          <li class="board-block" data-index="17"></li>
-          <li class="board-block" data-index="18"></li>
-          <li class="board-block" data-index="19"></li>
+        <ul class="board-row row-2">
           <li class="board-block" data-index="20"></li>
-        </ul>
-        <ul class="board-row row-4">
           <li class="board-block" data-index="21"></li>
           <li class="board-block" data-index="22"></li>
           <li class="board-block" data-index="23"></li>
           <li class="board-block" data-index="24"></li>
-          <li class="board-block" data-index="25"></li>
+        </ul>
+        <ul class="board-row row-3">
+          <li class="board-block" data-index="30"></li>
+          <li class="board-block" data-index="31"></li>
+          <li class="board-block" data-index="32"></li>
+          <li class="board-block" data-index="33"></li>
+          <li class="board-block" data-index="34"></li>
+        </ul>
+        <ul class="board-row row-4">
+          <li class="board-block" data-index="40"></li>
+          <li class="board-block" data-index="41"></li>
+          <li class="board-block" data-index="42"></li>
+          <li class="board-block" data-index="43"></li>
+          <li class="board-block" data-index="44"></li>
         </ul>
         <ul class="board-row row-5">
-          <li class="board-block" data-index="26"></li>
-          <li class="board-block" data-index="27"></li>
-          <li class="board-block" data-index="28"></li>
-          <li class="board-block" data-index="29"></li>
-          <li class="board-block" data-index="30"></li>
+          <li class="board-block" data-index="50"></li>
+          <li class="board-block" data-index="51"></li>
+          <li class="board-block" data-index="52"></li>
+          <li class="board-block" data-index="53"></li>
+          <li class="board-block" data-index="54"></li>
         </ul>
       </div>
     </main>
@@ -98,5 +96,6 @@
         </ul>
       </div>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
